    at what char's have been typed and making decisions from that.
    * Modified buffer package to take commands instead of char's: The buffer
    package now takes only full commands at a time.
    * Fixing gdbmi interface to work with new libtgdb interface.
    * Fixing tgdb_util to use ~/.tgdb/gdb_init as the startup file

02/23/2003 Bob Rossi <bob_rossi@cox.net>

    * Changed the Makefile's back to not using libtool: The new version of 
    automake support making static libraries from files in multiple dirs.
    * Major re-write, tgdb takes a command at a time now: libtgdb 
    now takes a command at a time. Instead of a char.
    * Removing states from data that checked for char's the user typed:
    This is because libtgdb now only accepts full commands.

02/19/2003 Bob Rossi <bob_rossi@cox.net>

    * Changed commands.c to dynamically allocate memory from 'info sources':
    When the user wants a list of sources, libtgdb should now be able to
    handle as many source files as the program is made up of. There used to be
    a MAXLINE limit to the number of char's that 'info sources' could output.

02/16/2003 Bob Rossi <bob_rossi@cox.net>

    * Reorganized libtgdb completly. Only 1 library is created now

02/12/2003 Bob Rossi <bob_rossi@cox.net>

    * Reorganized tgdb to be able to interface with gdb in multiple ways:
    This means that annotate-two-src interfaces with older gdb's using 
    annotate level 2. gdb-mi-src interfaces with gdb's that support mi.
    * Removed macro support from tgdb: It should be done from the application
    level not the library level.

version 0.2.3 (01/30/2003):

version 0.2.2 (01/23/2003):

01/22/2003  Bob Rossi  <bob_rossi@cox.net>

    * Changed tgdb, not halting when doing multiple line tab completion: 
    Fix tgdb when interfacing with readline, if readline returns a '\r' then 
    tgdb puts the prompt back otherwise, if readline issues a '\n' by doing 